--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ puts memory_status.inspect
 
 <h3>Support or Contact</h3>
 
-<p>Please let me know how I can improve this. Just got something together for my use case. <a href="https://github.com/skillachie" class="user-mention">@skillachie</a></p>
+<p>Please let me know how I can improve this. Just got something together for my use case. <a href="http://twitter.com/#!/skillachie" class="user-mention">@skillachie</a></p>
       </section>
       <footer>
         <p>This project is maintained by <a href="https://github.com/skillachie">skillachie</a></p>
