--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 <pre><code>require "rubygems"
 require 'passenger_status'
 
-status = PassengerStatus.passgener_stat
+status = PassengerStatus.passenger_stat
 memory_status = PassengerStatus.passenger_memory
 
 puts status.inspect
